specific car done

--- a/bil.html
+++ b/bil.html
@@ -22,7 +22,14 @@
         </section>
         <a href="biler.html">< Tilbage til biler på lager</a>
         <section class="grid">
-            <img src="assets/images/Andrew-Garfield-Variety-Cover-Story-2-16x9-1.jpeg" alt="">
+            <section class="slideshowGrid"> 
+                <i class="ikon ikon1 fas fa-chevron-left" onclick="plusDivs(-1)"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self --> 
+                <section>
+                    <img class="firstPic mySlides" src="assets/images/Andrew-Garfield-Variety-Cover-Story-2-16x9-1.jpeg" alt="">
+                    <img class="mySlides" src="assets/images/miso.JPG" alt="">
+                </section>
+                <i class="ikon ikon2 fas fa-chevron-right" onclick="plusDivs(1)"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self -->
+            </section>
             <article>
                 <article class="details">
                     <h4>Detaljer</h4>
@@ -81,6 +88,7 @@
                 </article>
             </article>
             <article>
+                <h3>Beskrivelse</h3>
                 <p>Vi har denne direktionsvogn på lager til omgående levering, endda til en super skarp pris.</p>
                 <p>Bilen står utroligt flot og venter på sin nye ejer, skal det være dig?</p>
                 <article class="grey">
