--- a/leasing.html
+++ b/leasing.html
@@ -2365,17 +2365,19 @@
                             splitleasing? Så kan du læse det her.
                         </p>
                     </section> 
-                    <h2>
-                        Stor erfaring med splitleasing af alle bilmærker
-                    </h2>
-                    <p>
-                        Hos Sparta Biler ApS vælger du en professionel
-                        samarbejdspartner, der har stor erfaring med splitleasing af alle
-                        bilmærker. Vores kæmpe netværk gør, at vi altid er i stand til at
-                        finde den rette bil til dig med de rigtige specifikationer. Når du
-                        laver en aftale om splitleasing af din drømmebil gennem os får du
-                        det som du vil have det.
-                    </p>
+                    <section>
+                        <h2>
+                            Stor erfaring med splitleasing af alle bilmærker
+                        </h2>
+                        <p>
+                            Hos Sparta Biler ApS vælger du en professionel
+                            samarbejdspartner, der har stor erfaring med splitleasing af alle
+                            bilmærker. Vores kæmpe netværk gør, at vi altid er i stand til at
+                            finde den rette bil til dig med de rigtige specifikationer. Når du
+                            laver en aftale om splitleasing af din drømmebil gennem os får du
+                            det som du vil have det.
+                        </p>
+                    </section>
                 </article>
             </section>
         </article>
