--- a/bil.html
+++ b/bil.html
@@ -20,7 +20,7 @@
         <section class="title">
             <h1 class="bold">JEEP COMPAS</h1>
         </section>
-        <a href="biler.html">< Tilbage til biler på lager</a>
+        <a href="biler.html" class="linkToCars">< Tilbage til biler på lager</a>
         <section class="grid">
             <section class="slideshowGrid"> 
                 <i class="ikon ikon1 fas fa-chevron-left" onclick="plusDivs(-1)"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self --> 
