--- a/biler.html
+++ b/biler.html
@@ -29,7 +29,7 @@
             </select>
         </section>
         <section class="carGrid">
-            <section class="carBox">
+            <a href="bil.html" class="carBox">
                 <img src="assets/images/testbil.jpg" alt="">
                 <article class="details">
                     <section>
@@ -58,7 +58,7 @@
                         <p>Benzin</p>
                     </section>
                 </article>
-            </section>
+            </a>
             <section class="carBox">
                 <img src="assets/images/testbil.jpg" alt="">
                 <article class="details">
