options and stuff
hehe

--- a/biler.html
+++ b/biler.html
@@ -21,12 +21,44 @@
         <section class="options">
             <select name="cars" id="cars">
                 <option value="">Mærke</option>
-                <option value="volvo">Volvo</option>
-                <option value="toyota">Toyata</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
                 <option value="audi">Audi</option>
+                <option value="bmw">BMW</option>
+                <option value="passat">Passat</option>
+                <option value="rangerover">Range Rover</option>
+                <option value="mercedes">Mercedes</option>
             </select>
+            <select name="cars" id="cars">
+                <option value="">Pris</option>
+                <option value="slider">Slider here</option>
+            </select>
+            <select name="cars" id="cars">
+                <option value="">Årstal</option>
+                <option value="2011">2011</option>
+                <option value="2012">2012</option>
+                <option value="2013">2013</option>
+                <option value="2014">2014</option>
+                <option value="2015">2015</option>
+                <option value="2016">2016</option>
+                <option value="2017">2017</option>
+                <option value="2018">2018</option>
+                <option value="2019">2019</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+            </select>
+            <select name="cars" id="cars">
+                <option value="">KM kørt</option>
+                <option value="slider">Slider here</option>
+            </select>
+            <select name="cars" id="cars">
+                <option value="">Brændstof</option>
+                <option value="benzin">Benzin</option>
+                <option value="hybrid">Hybrid</option>
+                <option value="el">El</option>
+            </select>
+            <a>
+                <button class="filterbutton">SØG</button>
+            </a>
+
         </section>
         <section class="carGrid">
             <a href="bil.html" class="carBox">
