--- a/bil.html
+++ b/bil.html
@@ -20,15 +20,15 @@
         <section class="title">
             <h1 class="bold">JEEP COMPAS</h1>
         </section>
-        <a href="biler.html" class="linkToCars">< Tilbage til biler på lager</a>
+        <a href="biler-pa-lager.html" class="linkToCars">< Tilbage til biler på lager</a>
         <section class="grid">
             <section class="slideshowGrid"> 
-                <i class="ikon ikon1 fas fa-chevron-left" onclick="plusDivs(-1)"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self --> 
+                <i class="knap1 ikon ikon1 fas fa-chevron-left" onclick="plusDivs(-1, 'knap1')"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self --> 
                 <section>
                     <img class="firstPic mySlides" src="assets/images/Andrew-Garfield-Variety-Cover-Story-2-16x9-1.jpeg" alt="">
                     <img class="mySlides" src="assets/images/miso.JPG" alt="">
                 </section>
-                <i class="ikon ikon2 fas fa-chevron-right" onclick="plusDivs(1)"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self -->
+                <i class="knap2 ikon ikon2 fas fa-chevron-right" onclick="plusDivs(1, 'knap2')"></i> <!-- Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self -->
             </section>
             <article>
                 <article class="details">
