--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="text">
             <h1>SPARTA BILER</h1>
             <p>Vi tilbyder køb & salg af biler til privat og erhverv samt leasing af alle bilmærker.</p>
-            <a href="biler.html">
+            <a href="biler-pa-lager.html">
                 <button>Biler på lager</button>
             </a>
         </section>
